# draft-protocol

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  BENCHMARKS.md  CHANGELOG.md  CONFORMANCE.md  CONTRIBUTING.md  Dockerfile  INTEGRATIONS.md  LICENSE  METHODOLOGY.md  Makefile  README.md  RELEASING.md  ROADMAP.md  RULES.md  SECURITY.md  STRUCTURE.md  THREAT_MODEL.md  docker-compose.example.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: PRODUCT_STANDARD.md  README.md  api.md  architecture.md
examples/: README.md  basic_usage.py
extension/: background.js  content.css  content.js  manifest.json  popup.html  popup.js  sidepanel.html  sidepanel.js
scripts/tmp/: run_lint.ps1  run_new_tests.ps1  run_tests.ps1
src/draft_protocol/: __init__.py  __main__.py  config.py  engine.py  extension_points.py  hmac_utils.py  providers.py  rest.py  server.py  storage.py
tests/: conftest.py  test_draft_protocol.py  test_rest.py  test_security.py  test_v1_1_features.py  test_v1_2_features.py
