[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "draft-protocol"
version = "0.1.0"
description = "DRAFT Protocol — Intake governance for AI tool calls. Ensures AI understands human intent before execution begins."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Manifold Vector LLC" },
]
keywords = [
    "ai",
    "governance",
    "mcp",
    "safety",
    "elicitation",
    "intent-verification",
    "llm",
    "model-context-protocol",
    "ai-safety",
    "tool-use",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Typing :: Typed",
]
dependencies = [
    "fastmcp>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "build>=1.0",
    "twine>=5.0",
]

[project.urls]
Homepage = "https://github.com/georgegoytia/draft-protocol"
Documentation = "https://github.com/georgegoytia/draft-protocol#readme"
Changelog = "https://github.com/georgegoytia/draft-protocol/blob/main/CHANGELOG.md"
Issues = "https://github.com/georgegoytia/draft-protocol/issues"
Source = "https://github.com/georgegoytia/draft-protocol"

[project.scripts]
draft-protocol = "draft_protocol.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/draft_protocol"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH"]

[tool.ruff.lint.isort]
known-first-party = ["draft_protocol"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
