[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "draft-protocol"
version = "1.1.0"
description = "DRAFT Protocol — Intake governance for AI tool calls. Ensures AI understands human intent before execution begins."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Manifold Vector LLC" },
]
keywords = [
    "ai",
    "governance",
    "mcp",
    "safety",
    "elicitation",
    "intent-verification",
    "llm",
    "model-context-protocol",
    "ai-safety",
    "tool-use",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Typing :: Typed",
]
dependencies = [
    "fastmcp>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "build>=1.0",
    "twine>=5.0",
    "python-semantic-release>=10.0",
]

[project.urls]
Homepage = "https://github.com/manifold-vectors/draft-protocol"
Documentation = "https://github.com/manifold-vectors/draft-protocol#readme"
Changelog = "https://github.com/manifold-vectors/draft-protocol/blob/main/CHANGELOG.md"
Issues = "https://github.com/manifold-vectors/draft-protocol/issues"
Source = "https://github.com/manifold-vectors/draft-protocol"

[project.scripts]
draft-protocol = "draft_protocol.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/draft_protocol"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH"]

[tool.ruff.lint.isort]
known-first-party = ["draft_protocol"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true

# ── Semantic Release ──────────────────────────────────────────
[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/draft_protocol/__init__.py:__version__"]
major_on_zero = false
branch = "main"
commit_message = "release: v{version}"
tag_format = "v{version}"
build_command = "pip install build && python -m build"

[tool.semantic_release.changelog]
template_dir = "templates"
changelog_file = "CHANGELOG.md"

[tool.semantic_release.remote]
name = "origin"
type = "github"
token = { env = "GH_TOKEN" }

[tool.semantic_release.publish]
upload_to_vcs_release = true
